# SwanLab

./: .editorconfig  .eslintignore  .eslintrc-auto-import.json  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_EN.md  README_JP.md  README_RU.md  README_cn.md  README_en.md  README_zh-hans.md  SECURITY.md  build_pypi.py  jsconfig.json  jupyter_embed_test.ipynb  main.py  metadata-snapshot.d.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dashboard.txt  requirements-dev.txt  requirements-media.txt  requirements.txt  tailwind.config.js  vite.config.js  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  test-python-pr.yaml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_network_report.yml  03_web_report.yml  04_feature_request.yml  ask for question.md  bug report.md  bug提交.md  config.yml  feature advice.md  feature request.md
.github/PULL_REQUEST_TEMPLATE/: new version.md
.github/workflows/: publish-to-pypi.yml  test-core.yml  test-pr-to-main.yml  test-python-pr.yml  test-when-pr.yml  unit-test.yml
.husky/: pre-push
core/: .golangci.yml  LICENSE  README.md  go.mod  go.sum
core/cmd/: core.go
core/cmd/core/: core.go
core/internal/api/: api.go  parse.go  parse_test.go
core/pb/: common.pb.go  health_service.pb.go
docs/: 实验元数据.md  开放API.md  插件化设计.md  登录认证.md  硬件信息采集.md
prisma/: schema.prisma
protos/: README.md
script/: README.md  build_proto.py  build_pypi.py  explort_csv_from_local.py  test.py  transfer_logfile_0.1.4.py
scripts/: clean_pycache.sh  generate_protos.py
skills/swanlab-skill/: SKILL.md
swanlab/: __init__.py  __init__.pyi  __main__.py  echarts.py  env.py  error.py  exceptions.py  formatter.py  jupyter.py  main.py  package.json  package.py  swanlab_settings.py
swanlab/api/: __init__.py  api.py  base.py  column.py  cos.py  experiment.py  experiments.py  group.py  http.py  info.py  main.py  metric.py  model.py  project.py  projects.py  self_hosted.py  selfhosted.py  series.py  summary.py  thread.py  types.py  user.py  users.py  utils.py  workspace.py  workspaces.py
swanlab/auth/: __init__.py  experiment.py  info.py  login.py  save.py  token.py
swanlab/cli/: __init__.py  main.py  utils.py
swanlab/cloud/: __init__.py  _log_collector.py  _log_sniffer.py  files_types.py  log_collector.py  start_thread.py  task_types.py  upload_types.py  utils.py
swanlab/compat/: README.md
swanlab/converter/: __init__.py  base.py  helper.py
swanlab/core_python/: __init__.py  session.py
swanlab/data/: __init__.py  callback_cloud.py  callback_local.py  chart.py  config.py  formater.py  formatter.py  main.py  namer.py  run_callback.py  save_manager.py  sdk.py  settings.py  store.py  system.py  utils.py
swanlab/database/: __init__.py  chart.py  database.py  experiment.py  experiments_name.py  expriment.py  expriments_name.py  main.py  project.py  server.py  system.py  table.py
swanlab/db/: __init__.py  callback.py  db_connect.py  error.py  model.py  setting.py  settings.py  table_config.py
swanlab/deprecated/: callbacks.py  echarts.py  local.py  project.py  sender.py
swanlab/echarts/: __init__.py
swanlab/integration/: accelerate.py  catboost.py  custom.py  fastai.py  huggingface.py  keras.py  lightgbm.py  mmengine.py  paddlenlp.py  pytorch_lightning.py  ray.py  sb3.py  torchtune.py  transformers.py  ultralytics.py  ultralytics_ddp.py  ultralytics_embed.py  wandb.py  xgboost.py
swanlab/interface/: __init__.py
swanlab/intergration/: huggingface.py  pytorch_lightning.py  test.ipynb
swanlab/log/: __init__.py  config.py  console.py  counter.py  log.bak.py  log.py  log_pro.py  profiler.py  type.py
swanlab/plugin/: __init__.py  __init___.py  notification.py  writer.py
swanlab/proto/: v0.py  v1.py
swanlab/sdk/: __init__.py
swanlab/server/: __init__.py  app.py  route.py  router.py  settings.py  utils.py  web.py
swanlab/sync/: __init__.py  mlflow.py  sync_utils.py  tensorboard.py  wandb.py
swanlab/system/: __init__.py  monitor.py  test.ipynb
swanlab/toolkit/: __init__.py  callback.py  logger.py  model.py
swanlab/transfers/: __init__.py  py.py  v0.py  v1.py
swanlab/utils/: __init__.py  color.py  file.py  font.py  judgment.py  key.py  log.py  number.py  package.py  time.py  token.py
test/: __init__.py  _server.py  cli_test.py  create_error_chart.py  create_experiment.py  load.yaml  log_tqdm.py  proxy_tqdm.py  start_server.py  sync_mlflow.py  sync_tensorboardX.py  sync_tensorboard_torch.py  sync_wandb.py  tensorboard_sync.py  test_bug.py  test_catch_error.py  test_consoler.py  test_database.py  test_database_create.py  test_flock.py  test_get_console.py  test_openai.ipynb  test_proxy.py  test_system.py  test_wandb.py  use_swanlog.py
test/api/: project.py  run.py  runs.py  self_hosted.py  user.py
test/config/: config.json
test/db/: __init__.py  test_chart.py  test_display.py  test_experiment.py  test_namespace.py  test_pinned.py  test_project.py  test_tag.py
test/echarts/: test_eharts.py
test/integration/: README.md
test/metrics/: echarts.py  molecule.py  object_3d.py  object_3d.spatiallm.example.py  video.py
test/plugin/: notification_bark.py  notification_telegram.py  test_notification_telegram.py
test/resume/: allow.py  must.py
test/sync/: sync.py  sync.sh
test/temp/: .netrc
test/test_logging/: app.py  test1.py  test2.py
test/text_logging/: app.py
test/unit/: conftest.py  main.py  pytest_before_all.py  pytest_env.py  pytest_example.py  pytest_package.py  test_env.py  test_example.py  test_formatter.py  test_package.py  test_swanlab_settings.py
tests/benchmark/: conftest.py
tests/unit/: conftest.py  test_swanlab_run_e2e.py
tutils/: __init__.py  check.py  config.py  package.mock.json  setup.py  utils.py
unit/utils/: add_multi_exp_chart.py  create_exp.py  multi_exp_chart.py  package.py
utils/test/: config.py
vue/: .env  .env.development  .env.mock  index.html
vue/src/: App.vue  main.js  style.css  style.scss
wandb/: settings
(+1493 files in other folders)
