[project]
name = "swanlab"
dynamic = ["readme", "version"]
license = "Apache-2.0"
description = "Python library for streamlined tracking and management of AI training processes."
requires-python = ">=3.8"
authors = [
    { name = "Cunyue", email = "team@swanhub.co" },
    { name = "ZeYi Lin", email = "team@swanhub.co" },
    { name = "Kaikaikaifang", email = "team@swanhub.co" },
    { name = "Feudalman", email = "team@swanhub.co" },
]
keywords = [
    "machine learning",
    "reproducibility",
    "visualization"
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Visualization',
]

dependencies = [
    "urllib3>=1.26.0",
    "requests>=2.28.0",
    "setuptools",
    "click",
    "pyyaml",
    "psutil>=5.0.0",
    "nvidia-ml-py",
    "pydantic~=2.0",
    "pyecharts>=2.0.0",
    "wrapt>=1.17.0",
    "platformdirs>=4.2.0",
    "typing_extensions; python_version < '3.9'",
    "protobuf>=3.12.0,!=4.21.0,!=5.28.0,<7; python_version < '3.9' and sys_platform == 'linux'",
    "protobuf>=3.15.0,!=4.21.0,!=5.28.0,<7; python_version == '3.9' and sys_platform == 'linux'",
    "protobuf>=3.19.0,!=4.21.0,!=5.28.0,<7; python_version > '3.9' and sys_platform == 'linux'",
    "protobuf>=3.19.0,!=4.21.0,!=5.28.0,<7; sys_platform != 'linux'",
    "rich>=13.6.0,<14.0.0",
    "pydantic-settings>=2.8.1",
]

# 对应 requirements-media.txt 和 requirements-dashboard.txt [cite: 3, 5]
[project.optional-dependencies]
media = [
    "soundfile",
    "pillow",
    "matplotlib",
    "numpy",
    "moviepy",
    "imageio[ffmpeg]",
    "rdkit",
]
dashboard = [
    "swanboard==0.1.9b3",
]

[dependency-groups]
dev = [
    "build",
    "pytest",
    "pytest-mock",
    "nanoid",
    "omegaconf",
    "ipython",
    "ipython<8.13; python_version < '3.9'",
    "ipykernel",
    "torch",
    "torchvision",
    "pandas",
    "python-dotenv",
    "freezegun",
    "responses",
    "requests-mock==1.12.1",
    "mmengine",
    "grpcio-tools",
    "wandb",
    "ruff>=0.15.4",
    "pre-commit>=3.5.0",
    "pyright>=1.1.408",
]

[project.scripts]
swanlab = "swanlab.cli:cli"

[project.urls]
"Homepage" = "https://swanlab.cn"
"Source" = "https://github.com/SwanHubX/SwanLab"
"Bug Reports" = "https://github.com/SwanHubX/SwanLab/issues"
"Documentation" = "https://docs.swanlab.cn/zh/guide_cloud/general/what-is-swanlab.html"

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme>=22.5.0"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "swanlab/package.json"
pattern = ".*\"version\":\\s*\"(?P<version>[^\"]+)\""

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = "(readme_files)/"
replacement = 'https://raw.githubusercontent.com/SwanHubX/swanlab/main/\g<1>/'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = "README_en.md"
replacement = 'https://github.com/SwanHubX/SwanLab/blob/main/README_en.md'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = "README.md"
replacement = "https://github.com/SwanHubX/SwanLab/blob/main/README.md"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py38"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default, and isort (`I`).
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
